shared/jenkins/security_goup.tf
resource "aws_security_group" "jenkins" {

  name        = "jenkins-sg"
  description = "Security Group do Jenkins"

  vpc_id = data.terraform_remote_state.network.outputs.vpc_id

  ingress {
    description = "SSH"

    from_port = 22
    to_port   = 22

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {

    description = "Jenkins"

    from_port = 8080
    to_port   = 8080

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {

    from_port = 0
    to_port   = 0

    protocol = "-1"

    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sg-jenkins"
  }
}
